syntax = "proto3";

package gws.method.user.logout;

option java_package = "net.foreworld.gws.protobuf.method.user";
option java_outer_classname = "Logout";

message RequestProtobuf {
}

message ResponseProtobuf {
  bytes reason = 1;
}
