syntax = "proto3";

package gws.model;

option java_package = "net.foreworld.gws.protobuf.model";
option java_outer_classname = "User";

message UserProtobuf {
  string id = 1;
  string user_name = 2;
  string user_pass = 3;

  enum Sex {
    FEMALE = 0;
    MALE = 1;
  }

  Sex sex = 4;
}